--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -1,17 +1,15 @@
-
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 48rem) {
   .containerMain {
-    width: 70%;
-    min-width: 250px; 
-    height: 40%;
+    width: 90%;
+    min-width: 12.5rem;
+    height: 35%;
   }
 }
 
-
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 30rem) {
   .containerMain {
     width: 90%;
-    min-width: 200px;
+    min-width: 12.5rem;
     height: 35%;
   }
 }
@@ -21,10 +19,12 @@
   width: 100vw;
   height: 100vh;
 }
+
 .logo {
   height: 100vh;
-  width: 50vw;
+  width: 25rem;
 }
+
 .containerFundo {
   display: flex;
   justify-content: center;
@@ -41,8 +41,8 @@
   left: 50%;
   top: 13%;
   transform: translate(-50%, -50%);
-  width: 20%;
-  height: 20%;
+  width: 3.125rem;
+  height: 3.125rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -50,22 +50,22 @@
 
 .logo {
   height: 100%;
-  width: auto; 
+  width: auto;
 }
 
 .containerMain {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 50%;
-  min-width: 420px;
-  max-width: 420px;  
+  width: 25rem;
+  min-width: 26.25rem;
+  max-width: 26.25rem;
   height: 50%;
-  min-height: 300px;
-  max-height: 420px;
+  min-height: 18.75rem;
+  max-height: 26.25rem;
   background-color: var(--white);
-  border-radius: 40px;
-  box-shadow: 0px 0px 20px 0px var(--black-200);
+  border-radius: 2.5rem;
+  box-shadow: 0px 0px 1.25rem 0px var(--black-200);
 }
 
 .formLogin {
@@ -88,17 +88,18 @@
   width: 100%;
   padding-left: 0.7rem;
   height: 2.5rem;
-  border-radius: 5px;
+  border-radius: 0.3125rem;
   border: 1px solid var(--gray-200);
   margin-top: 0.2rem;
   cursor: text;
 }
+
 .groupForm {
   width: 100%;
 }
 
 .btnLoginContainer {
-  display:flex;
+  display: flex;
   justify-content: flex-end;
   margin-right: 0.6rem;
 }
@@ -116,18 +117,18 @@
   font-family: 'Poppins', sans-serif;
   cursor: pointer;
   position: relative;
-  box-shadow: 0 5px 10px var(--black-200);
+  box-shadow: 0 0.3125rem 0.63rem var(--black-200);
   transition: transform 0.2s, box-shadow 0.2s;
 }
 
 .btnLogin:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 10px 20px var(--black-200);
+  transform: translateY(-0.1875rem);
+  box-shadow: 0 0.63rem 1.25rem var(--black-200);
 }
 
 .btnLogin:active {
-  transform: translateY(-1px);
-  box-shadow: 0 5px 10px var(--black-200);
+  transform: translateY(-0.063rem);
+  box-shadow: 0 0.3125rem 0.63rem var(--black-200);
 }
 
 .btnLogin::after {
@@ -138,7 +139,7 @@
   width: 100%;
   height: 100%;
   border-radius: 6.25rem;
-  border: 2px;
+  border: 0.125rem;
   border-color: var(--verde-light);
   background: var(--verde-learn);
   z-index: -1;
@@ -163,14 +164,15 @@
   padding: 1em 0.8em 1em 0.8em;
   font-family: 'Poppins', sans-serif;
   transition: box-shadow 0.3s ease-out, background-color 0.3s ease-out;
-  box-shadow: 0px 0.3em 1em var(--black-200);
+  box-shadow: 0px 0.19rem 0.625rem var(--black-200);
   user-select: none;
 }
 
 .btnLogin:hover {
   cursor: pointer;
 }
-b.tnLoginTeste:hover {
+
+.btnLoginTeste:hover {
   cursor: pointer;
 }
 
@@ -178,6 +180,7 @@ b.tnLoginTeste:hover {
   text-align: center;
   height: 2.5rem;
 }
+
 .error {
   color: var(--red-300);
 }
