--- a/src/styles/NovoContrato.module.css
+++ b/src/styles/NovoContrato.module.css
@@ -13,7 +13,14 @@
   flex-direction: column;
   gap: 1rem;
 }
+.labelCheckBox {
+  display: flex;
+}
 
+.inputCheckBox{
+  width: 2rem;
+  cursor: pointer;
+}
 .inputStandard {
   all: unset;
   text-align: start;
