--- a/src/styles/ModalTopNavBaR.module.css
+++ b/src/styles/ModalTopNavBaR.module.css
@@ -13,20 +13,20 @@
 
 .container {
   background-color: var(--white);
-  border-radius: 25px;
-  padding: 20px;
-  width: 200px;
+  border-radius: 1.7rem;
+  padding: 1.3rem;
+  width: 12.5rem;
   color: var(--gray-300);
   text-align: center;
   box-shadow: 0 0 10px var(--black-200);
-  margin-top: 3.2em;
+  margin-top: 3.4em;
   margin-right: 1em;
 }
 
 
 .title {
-  font-size: 20px;
-  margin-bottom: 10px;
+  font-size: 1.3rem;
+  margin-bottom: 0.625px;
 }
 
 #text {
@@ -56,7 +56,7 @@
 }
 
 .btn:hover {
-  background-color: var(--verde-tech);
+  background-color: var(--azul-tech);
   color: var(--white);
 }
 
