--- a/src/styles/ModalDados.module.css
+++ b/src/styles/ModalDados.module.css
@@ -47,4 +47,31 @@
 .label {
   font-weight: bold;
   color: var(--gray-300);
+  white-space: nowrap;
+}
+.conteinerUrlDados{
+  display: flex;         
+  flex-direction: row; 
+  gap: 0.5em;      
+  flex-wrap: wrap;
+}
+
+.boxUrl {
+  display: flex;
+  width: 22em;
+  overflow: auto; 
+}
+
+.boxUrl::-webkit-scrollbar-thumb {
+  background-color: var(--gray-300);
+  border-radius: 9px;
+}
+
+.boxUrl::-webkit-scrollbar-track {
+  background-color: var(--white);
+  border-radius: 6px; 
+}
+
+.boxUrl::-webkit-scrollbar {
+  height: 5px; 
 }
