--- a/src/styles/NovoContrato.module.css
+++ b/src/styles/NovoContrato.module.css
@@ -43,6 +43,7 @@
   border-radius: 5px;
   border: 1px solid var(--gray-200);
   margin-top: 0.2rem;
+  background-color: var(--white);
   cursor: pointer;
 }
 
