--- a/src/styles/Table.module.css
+++ b/src/styles/Table.module.css
@@ -117,7 +117,8 @@
   color: var(--gray-300);
   background-color: var(--white);
   border-radius: 5px;
-  border: 0.063em solid var(--gray-200);
+  background-color: var(--white);
+  border: 1px solid var(--gray-200);
   cursor: pointer;
 }
 .inputFilter:focus-within,
