--- a/src/styles/ModalOpenDoc.module.css
+++ b/src/styles/ModalOpenDoc.module.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   display: flex;
-  background-color: var(-gray--300);
+  background-color: var(--gray-202);
   justify-content: center;
   align-items: center;
   z-index: 3;
@@ -17,6 +17,7 @@
   width: 75%;
   height: 85%;
   box-shadow: 0 0 10px var(--black-200);
+  z-index: 8;
 }
 
 .boxBtns {
