--- a/src/styles/ModalStandard.module.css
+++ b/src/styles/ModalStandard.module.css
@@ -97,7 +97,7 @@
   cursor: pointer;
   box-shadow: 0px 10px 20px 0px var(--black-200);
   margin-top: -10px;
-  transition: all 0.3s ease; 
+  transition: all 0.3s ease;
 }
 
 .confirmButton {
@@ -118,8 +118,8 @@
 
 .confirmButton:active,
 .cancelButton:active {
-transform: translateY(0);
-box-shadow: 0px 6px 12px 0px var(--black-200);
+  transform: translateY(0);
+  box-shadow: 0px 6px 12px 0px var(--black-200);
 }
 
 .boxCidadeEstadoCepTel {
@@ -245,7 +245,10 @@ box-shadow: 0px 6px 12px 0px var(--black-200);
   font-weight: bold;
   margin-bottom: 16px;
 }
-
+.titleModalEditarVinculoAgetne {
+  font-size: 20px;
+  color: var(--gray-300);
+}
 .divCheckBoxVincularAgente {
   display: flex;
   align-items: center;
