--- a/src/styles/Page.module.css
+++ b/src/styles/Page.module.css
@@ -168,3 +168,73 @@
 .backButtonTeste:hover {
   cursor: pointer;
 }
+
+.deleteButton {
+  all: unset;
+  display: flex;
+  border-radius: 6.25rem;
+  height: 3rem;
+  width: 8rem;
+  margin-right: 0.63rem;
+  color: var(--white);
+  background-color: var(--red-300);
+  justify-content: center;
+  align-items: center;
+  font-family: 'Poppins', sans-serif;
+  cursor: pointer;
+  position: relative;
+  box-shadow: 0 5px 10px var(--black-200);
+  transition: transform 0.3s ease-out, box-shadow 0.3s ease-out;
+}
+
+.deleteButton:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px var(--black-200);
+}
+
+.deleteButton:active {
+  transform: translateY(-1px);
+  box-shadow: 0 5px 10px var(--black-200);
+}
+
+.deleteButton::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 6.25rem;
+  background: var(--red-300);
+  z-index: -1;
+  opacity: 0;
+  transition: transform 0.4s ease-out, opacity 0.4s ease-out;
+}
+
+.deleteButton:hover::after {
+  opacity: 1;
+  transform: scale(1.1);
+}
+
+.deleteButtonTeste {
+  display: flex;
+  border-radius: 3rem;
+  height: 3rem;
+  width: 8rem;
+  color: var(--red-300);
+  background-color: var(--red-300);
+  justify-content: center;
+  align-items: center;
+  padding: 1em 0.8em 1em 0.8em;
+  font-family: 'Poppins', sans-serif;
+  transition: box-shadow 0.3s ease-out, background-color 0.3s ease-out, transform 0.3s ease-out;
+  box-shadow: 0px 0.3em 1em var(--black-200);
+  user-select: none;
+}
+
+.deleteButton:hover {
+  cursor: pointer;
+}
+.deleteButtonTeste:hover {
+  cursor: pointer;
+}
