--- a/src/styles/SideNavBar.module.css
+++ b/src/styles/SideNavBar.module.css
@@ -19,7 +19,7 @@
   display: flex;
   font-family: 'Poppins', sans-serif;
   font-size: 0.87em;
-  color: var(--gray-300);
+  color: var(--azul-tech);
   text-decoration: none;
   padding: 1.23em 2em;
   margin-bottom: 20px;
@@ -35,7 +35,7 @@
   bottom: 0;
   height: 2px;
   width: 0;
-  background-color: var(--azul-tech);
+  background-color: var(--verde-tech);
   transition: width 0.5s ease, left 0.5s ease;
 }
 
@@ -49,7 +49,7 @@
 }
 
 .navBarButton:hover {
-  color: var(--azul-tech);
+  color: var(--verde-tech);
 }
 
 .activeNavBarButton {
