--- a/src/styles/TopNavBar.module.css
+++ b/src/styles/TopNavBar.module.css
@@ -7,14 +7,18 @@
   display: flex;
   height: 4.5em;
   align-items: center;
-  background-color: var(--white);
+  background-image: url('/fundo_alternativo.png');
+  background-size: cover;
+  background-position: center;
   padding: 1rem;
   box-shadow: 0px 8px 20px -6px var(--black-14);
   color: var(--azul-tech);
 }
 
+
 .logoContainer {
   display: flex;
+  margin-top: 0.2rem;
   margin-left: 0.6rem;
   margin-right: 3.8em;
 }
@@ -31,6 +35,7 @@
   width: 2.5em;
   height: 2.5em;
   border-radius: 50%;
+  color: var(--white);
 }
 
 .toogleTopNav:hover {
@@ -44,6 +49,7 @@
 
 .user {
   font-size: 0.85em;
+  color: var(--white);
   display: flex;
   align-items: flex-end;
   margin-right: 0.9em;
